[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "myst-test-widgets"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
myst_test_widgets = { path = ".", editable = true }

[tool.pixi.tasks]
