[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "myst-test-widgets"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
myst_test_widgets = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
jupyter = ">=1.1.1,<2"
ipykernel = ">=7.1.0,<8"
ipywidgets = ">=8.1.8,<9"
numpy = ">=2.4.1,<3"
matplotlib = ">=3.10.8,<4"
